--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mangofactory</groupId>
 	<artifactId>swagger-springmvc</artifactId>
-	<version>0.2.5-SNAPSHOT</version>
+	<version>0.2.5-stevearm-1</version>
 	<name>Swagger SpringMVC</name>
 	<url>https://github.com/martypitt/swagger-springmvc</url>
 	<licenses>
@@ -19,9 +19,9 @@
 		<name>The Mango Factory</name>
 	</organization>
 	<scm>
-		<url>scm:git:git@github.com:martypitt/swagger-springmvc.git</url>
-		<connection>scm:git:git@github.com:martypitt/swagger-springmvc.git</connection>
-		<developerConnection>scm:git:git@github.com:martypitt/swagger-springmvc.git</developerConnection>
+		<url>scm:git:git@github.com:stevearm/swagger-springmvc.git</url>
+		<connection>scm:git:git@github.com:stevearm/swagger-springmvc.git</connection>
+		<developerConnection>scm:git:git@github.com:stevearm/swagger-springmvc.git</developerConnection>
 	</scm>
 	<issueManagement>
 		<system>Github</system>
